<resources>
    <string name="app_name">GPS_Positioning</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed:</string>
    <string name="value">Update</string>
    <string name="empty">-----</string>
</resources>
